# bouchaud-os

./: .gitignore  Cargo.toml  README.md  boot.ps1  build.rs  check.ps1  run-fullscreen.ps1  run.ps1
.cargo/: config.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_CIBLE.md  README_RESEAU.md  README_TLS.md  README_V0.13.2_DESKTOP_CHROMIUM.md  README_V0.13.md  README_V0.13_GUI_TERMINAL.md  README_V0.15_WINDOW_MANAGER.md  README_V0.5.md  README_V0.6.md  README_V0.8.md  README_V0.9.md  ROADMAP.md  WEB_ENGINE_MODULES.md
src/: diag.rs  macros.rs  main.rs
src/app/: launcher.rs  manifest.rs  mod.rs  runtime.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  pci.rs  ports.rs  rtc.rs
src/browser/: loader.rs  mod.rs  pages.rs  state.rs
src/browser/engine/: display_list.rs  js.rs  paint.rs  web.rs
src/browser/engine/js/: mod.rs
src/browser/ui/: chrome.rs
src/drivers/: disk.rs  display.rs  e1000.rs  gfx.rs  keyboard.rs  mod.rs  mouse.rs  net.rs  serial.rs  vga.rs
src/drivers/gfx/: font.rs  ttf.rs
src/fs/: mod.rs  ramfs.rs
src/git/: mod.rs
src/gui/: desktop.rs  event.rs  framebuffer.rs  image.rs  js.rs  mod.rs  mouse.rs  web.rs  widgets.rs  window.rs  window_manager.rs
src/gui/apps/: calculator.rs  chromium_stub.rs  file_explorer.rs  mod.rs  nautile.rs  rustpad.rs  system_info.rs  terminal.rs
src/gui/engine/: font_ttf.rs  image.rs  js.rs  mod.rs  web.rs
src/kernel/: dmesg.rs  handle.rs  heap.rs  memory.rs  mod.rs  panic.rs  process.rs  scheduler.rs  syscall.rs  timer.rs
src/lang/: mini_rust.rs  mod.rs
src/net/: arp.rs  brotli.rs  html.rs  http.rs  http2.rs  icmp.rs  inflate.rs  mod.rs  stack.rs  tcp.rs  tls.rs
src/net/application/: dhcp.rs  dns.rs  hpack.rs  http.rs  http2.rs  mod.rs
src/net/encoding/: brotli_tables.rs  inflate.rs  mod.rs
src/net/internet/: ipv4.rs  mod.rs
src/net/link/: ethernet.rs  mod.rs
src/net/security/: mod.rs
src/net/security/tls/: aes.rs  alert.rs  ec.rs  handshake.rs  hash.rs  mod.rs  p256.rs  p384.rs  record.rs  rng.rs  roots.rs  rsa.rs  sha256.rs  sha512.rs  validate.rs  x25519.rs
src/net/tls/: asn1.rs  bignum.rs  chacha.rs  gcm.rs  handshake.rs  hash.rs  mod.rs  p256.rs  p384.rs  record.rs  roots.rs  validate.rs  x509.rs
src/net/transport/: mod.rs  tcp.rs  udp.rs
src/shell/: commands.rs  editor.rs  history.rs  mod.rs
src/users/: mod.rs
src/wasm/: mod.rs
tools/: update-nautile.ps1
tools/render-proxy/: README.md  package-lock.json  package.json  server.js
