[package]
name = "bouchaud-os"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Bouchaud"]
description = "Bouchaud OS - noyau expérimental from scratch en Rust"
license = "MIT OR Apache-2.0"

[dependencies]
# Bootloader expérimental x86_64 utilisé uniquement pour la phase 0.
# Objectif futur : écrire/maîtriser notre propre chaîne de boot.
# map_physical_memory : mappe toute la RAM physique a un offset connu
# (necessaire pour le MMIO et le DMA du driver reseau e1000).
bootloader = { version = "0.9.31", features = ["map_physical_memory"] }

# Briques bas niveau standard de l'OSdev Rust (no_std) : structures GDT/IDT,
# instructions privilegiees, et controleur d'interruptions PIC 8259.
x86_64 = "0.14.2"
pic8259 = "0.10.1"

# Allocateur de tas pour activer `alloc` (Vec/String/BTreeMap).
linked_list_allocator = "0.10"

# Interpreteur WebAssembly no_std (alloc) : execute des modules `.wasm` compiles
# depuis n'importe quel langage. `default-features = false` desactive `std`
# (on fournit notre propre allocateur global + point d'entree). Voir `src/wasm/`.
wasmi = { version = "0.31", default-features = false }

[profile.dev]
panic = "abort"
# Optimisation activee meme en debug : la crypto TLS (RSA/EC/bignum) devient
# ~20x plus rapide -> handshake quasi instantane au lieu de plusieurs secondes
# de "lag" a chaque chargement. Cout : compilation un peu plus longue.
opt-level = 2

[profile.release]
panic = "abort"
